# rust_chess_engine

./: Cargo.toml
frontend/: index.html
src/: attack_maps.rs  bit_board.rs  engine.rs  main.rs  move_generator.rs  piece_set.rs  player.rs  utils.rs
src/tests/: mod.rs
